update code newest in 14/10/2025 v1

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -17,6 +17,8 @@ RUN pip install --no-cache-dir -r requirements.txt
 
 COPY app/ ./app/
 
+COPY frontend/ ./frontend/
+
 RUN mkdir -p data/audio_input data/audio_output data/praat_output data/models
 
 COPY .env* ./
