--- a/requirements.txt
+++ b/requirements.txt
@@ -5,10 +5,10 @@ librosa==0.10.1
 soundfile==0.12.1
 numpy==1.24.3
 pydantic==2.5.0
+pydantic-settings==2.1.0
 python-dotenv==1.0.0
 openai-whisper==20231117
 jieba==0.42.1
 requests==2.31.0
-pandas==2.3.2
-jinja2==3.1.2
+pandas==2.2.2
 aiofiles==23.2.1
