update code for hskk format scoring v1

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,17 @@
-PRAAT_CONTAINER_NAME=hskk-praat-scoring_praat_1
-TARGET_SAMPLE_RATE=16000
+# Application settings
+DEBUG=false
 LOG_LEVEL=INFO
+
+# Docker/Praat
+PRAAT_CONTAINER_NAME=hskk-praat-container
+PRAAT_TIMEOUT=60
+
+# AI Providers (set your API keys)
+OPENAI_API_KEY=sk-your-openai-key-here
+OPENAI_MODEL=gpt-4.1-nano
+
+GEMINI_API_KEY=your-gemini-api-key-here
+GEMINI_MODEL=gemini-2.0-flash-exp
+
+# Default AI provider: "openai" or "gemini"
+DEFAULT_AI_PROVIDER=gemini
