--- a/requirements.txt
+++ b/requirements.txt
@@ -7,8 +7,8 @@ numpy==1.24.3
 pydantic==2.5.0
 pydantic-settings==2.1.0
 python-dotenv==1.0.0
-openai-whisper==20231117
-jieba==0.42.1
-requests==2.31.0
-pandas==2.2.2
 aiofiles==23.2.1
+
+# AI Providers
+openai>=1.0.0
+google-generativeai>=0.3.0
