--- a/requirements.txt
+++ b/requirements.txt
@@ -12,3 +12,13 @@ aiofiles==23.2.1
 # AI Providers
 openai>=1.0.0
 google-generativeai>=0.3.0
+
+# Local STT (FunASR)
+funasr==1.3.0
+torch==2.9.1
+modelscope==1.33.0
+torchaudio==2.9.1
+
+
+# Chinese language support
+pypinyin>=0.49.0
